# codex-feishu-bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.spec-workflow/specs/feishu-codex-bot/: design.md  requirements.md  tasks.md
docs/: codex_notification_coverage.md  feishu_app_callback.md  feishu_app_permissions.json  feishu_app_permissions.md  feishu_callback.json  feishu_event_subscription.md  feishu_events.json  feishu_open_platform_config.md  main_sequence.md
schemas/: ClientRequest.json  CommandExecutionRequestApprovalParams.json  ServerRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
schemas/v2/: ConfigRequirementsReadResponse.json  ThreadResumeParams.json  ThreadStartParams.json
src/feishu_codex_bot/: __init__.py  app.py  bootstrap.py  cli.py  config.py  logging.py  runtime.py
src/feishu_codex_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/feishu_codex_bot/adapters/: codex_client.py  codex_output_classifier.py  feishu_adapter.py
src/feishu_codex_bot/models/: actions.py  inbound.py  session.py
src/feishu_codex_bot/persistence/: __init__.py  action_repo.py  db.py  dedupe_repo.py  reply_repo.py  security_repo.py  session_repo.py
src/feishu_codex_bot/services/: approval_service.py  codex_dump_service.py  conversation_service.py  media_service.py  reply_service.py  security_service.py
tests/: test_app.py  test_approval_service.py  test_cli.py  test_codex_dump_service.py  test_codex_output_classifier.py  test_conversation_service.py  test_feishu_card_payload.py  test_inbound_models.py  test_media_service.py  test_reply_service.py  test_security_service.py
(+21 files in other folders)
