[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-codex-bot"
version = "0.1.0"
description = "A Feishu bot server that bridges conversations to a local Codex app server."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "codex-feishu-bot contributors" }
]
keywords = ["feishu", "codex", "json-rpc", "bot"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.scripts]
feishu-codex-bot = "feishu_codex_bot.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
